fix gambar stretch

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -558,4 +558,12 @@ a.nav-link.active:hover {
     -webkit-text-fill-color: #f8f9fa;
 }
 
+/* Coba fix banner berita stretch */
 
+@media only screen and (max-width: 768px) {
+    /* For mobile phones: */
+    #banner-detail-berita img {
+        width: 300px;
+        height: 200px;
+    }
+  }
